Additional Java cleanup