@@ -35,7 +35,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Default implementation of {@link AuthManager}.
@@ -56,7 +55,7 @@ public class DefaultAuthManager implements AuthManager {
     @Override
     public synchronized @NonNull Optional<AuthProtocol> addProtocol(@NonNull AuthProtocol protocol) {
         Sanity.nullCheck(protocol, "Protocol");
-        List<AuthProtocol> matching = this.protocols.stream().filter(p -> p.getClass() == protocol.getClass()).collect(Collectors.toList());
+        List<AuthProtocol> matching = this.protocols.stream().filter(p -> p.getClass() == protocol.getClass()).toList();
         Optional<AuthProtocol> removed = Optional.ofNullable(matching.isEmpty() ? null : matching.get(0));
         removed.ifPresent(this::removeProtocol);
         this.protocols.add(protocol);
